<resources>
    <string name="app_name">rma19talirevicmatej49</string>
    <string name="spPostojeceKategorije">Kategorije</string>
    <string name="etNaziv">Naziv kviza - INPUT</string>
    <string name="etNazivPitanja">Naziv Pitanja - INPUT</string>
    <string name="moguca_pitanja">Moguca pitanja</string>
    <string name="pitanja_u_kvizu">Pitanja u kvizu</string>
    <string name="dodaj_kviz">Dodaj Kviz</string>
    <string name="dodaj">Dodaj</string>
    <string name="dodaj_tacan">Dodaj tacan</string>
    <string name="spasi_pitanje">Spasi pitanje</string>
    <string name="odgovori">Odgovori</string>
    <string name="odgovor">Odgovor</string>
    <string name="ikona">  Ikona</string>
    <string name="spasi_kategoriju">Spasi Kategoriju</string>
    <string name="dodaj_ikonu">Dodaj Ikonu</string>
    <string name="naziv_kategorije">  Naziv kategorije</string>
    <string name="importuj_kviz">Importuj kviz</string>
    <string name="naziv_kviza">Naziv kviza</string>
    <string name="broj_preostalih">Broj preostalih pitanja</string>
    <string name="procenat_tacnih">Procenat tacnih pitanja</string>
    <string name="broj_tacnih">Broj tacnih pitanja</string>
    <string name="kraj">Kraj</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kviz_zavrsen">Kviz je završen!</string>
</resources>
