<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnDodajKviz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="sans-serif"
        android:text="@string/dodaj_kviz"
        android:textAllCaps="false"
        android:textColor="@color/plava"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvMogucaPitanja" />

    <Spinner
        android:id="@+id/spKategorije"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etNaziv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextbackground"
        android:hint="@string/etNaziv"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/pitanjaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spKategorije" />


    <TextView
        android:id="@+id/pitanjaText"
        android:layout_width="154dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:text="@string/pitanja_u_kvizu"
        android:textAlignment="center"
        android:textColor="@color/colorLabel1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lvDodanaPitanja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNaziv" />

    <ListView
        android:id="@+id/lvDodanaPitanja"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/mogucaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitanjaText" />

    <TextView
        android:id="@+id/mogucaText"
        android:layout_width="154dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:text="@string/moguca_pitanja"
        android:textAlignment="center"
        android:textColor="@color/colorLabel2"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/lvMogucaPitanja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvDodanaPitanja" />

    <ListView
        android:id="@+id/lvMogucaPitanja"
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDodajKviz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mogucaText" />


</android.support.constraint.ConstraintLayout>